test increase timeout